testsuite/tests/deriving/should_compile/T15073a.hs
{-# LANGUAGE UnboxedTuples #-}
module T15073a where

class P a where
  p :: a -> (# a #)
