testsuite/tests/deriving/should_fail/T7800a.hs
{-# LANGUAGE PolyKinds #-}
module T7800a where

data A a